# teo-ros-simulation

./: gitignore  readme.md
teo_control/: CMakeLists.txt  package.xml  readme.md
teo_control/config/: teo_controllers(backup).yaml  teo_controllers.yaml
teo_control/launch/: teo_control.launch  teo_controllers.launch
teo_description/: CMakeLists.txt  README.md
teo_description/robots/: readme.md  teo.sdf  teo.urdf  teo_humanoid.urdf.xacro  teo_humanoid_attach.urdf.xacro
teo_description/urdf/: teo_structure.gazebo.xacro  teo_structure.gazebo.xacro~  teo_structure.urdf.xacro  teo_structure_attach.urdf.xacro
teo_description/urdf/arms/: arm.urdf.xacro
teo_description/urdf/head/: head.urdf.xacro  head_vis.urdf.xacro
teo_description/urdf/legs/: leg.urdf.xacro  legs_vis.urdf
teo_description/urdf/others/: teo_transmission.xacro
teo_description/urdf/torso/: torso.urdf.xacro  torso_vis.urdf.xacro
teo_gazebo/launch/: spawn_teo.launch.xml  teo.launch
